<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditTextPreference
        android:title="@string/pref_label_location"
        android:key="@string/pref_key_location"
        android:defaultValue="@string/pref_default_location"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_label_units"
        android:key="@string/pref_key_units"
        android:summary="@string/pref_summary_units"
        android:entries="@array/pref_entries_units"
        android:entryValues="@array/pref_entry_values_units"
        android:defaultValue="@string/pref_default_units"
        android:dialogTitle="@string/pref_dialog_title_units" />

</PreferenceScreen>
